fix height on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -14,6 +14,12 @@
   }
 }
 
+@media only screen and (max-height: 550px) {
+  h1 {
+    display: none;
+  }
+}
+
 @media only screen and (max-height: 480px) {
   canvas {
     height: 100vh;
@@ -32,9 +38,6 @@
   #gameInfos {
     height: 100vh;
     border-radius: unset;
-  }
-  h1 {
-    display: none;
   }
 
   .gameInfoMenu {
